--- a/style.css
+++ b/style.css
@@ -21,3 +21,24 @@ body {
     border-radius: 5px;
     cursor: pointer;
 }
+
+.fa-plus {
+    background-color: #abcea1;
+    padding: 3px;
+    border-radius: 3px;
+}
+
+#tasks {
+    display: grid;
+    gap: 14px;
+}
+
+#tasks div {
+    background-color: #e2eede;
+    border: 3px solid #abcea1;
+    padding: 5px;
+    border-radius: 6px;
+    display: grid;
+    gap: 4px;
+
+}
