--- a/style.css
+++ b/style.css
@@ -10,7 +10,14 @@ body {
     border-radius: 8px;
     padding: 15px;
     background-color: #fff;
+    overflow-y: scroll;
 }
+
+
+.app::-webkit-scrollbar { 
+    width: 0 !important 
+}
+
 
 #addNew {
     background-color: rgba(171, 206, 161, 0.35);
@@ -41,4 +48,18 @@ body {
     display: grid;
     gap: 4px;
 
+}
+
+.options {
+    justify-self: center;
+    display: flex;
+    gap: 20px;
+}
+
+.options i {
+    cursor: pointer;
+}
+
+#msg {
+    color: red;
 }
